--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "js-calculator-project",
   "version": "0.0.0",
   "private": true,
-  "main": "./bin/www",
+  "main": "app.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
