--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "js-calculator-project",
   "version": "0.0.0",
   "private": true,
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
